fixing edit case listing call